<resources>
    <string name="app_name">Driverify</string>
    <string name="title_activity_login"></string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!--    Bluetooth dialog-->
    <string name="dialogHead">Choose bluetooth device!</string>
    <string name="error">"There is an error."</string>
    <string name="bluetoothPerm">You cannnot use car monitoring features without connecting to bluetooth ECU device.</string>

    <!--    HOME-->
    <string name="homeDrive">Drive</string>
    <string name="homeDriveInfo">Get ready for driving. This monitors car info, drowsiness detection.</string>
    <string name="homeInfo">Info</string>
    <string name="homeInfoInfo">Information about the driver and the car.</string>
    <string name="homeTips">Trip</string>
    <string name="homeTipsInfo">Graphs and tips for safe and economical driving.</string>
    <string name="homeBlackBox">Black box</string>
    <string name="homeBlackBoxInfo">The information stored in this can be used by police in case of crash.</string>
    <string name="homeFaultCodes">Fault codes</string>
    <string name="homeFaultCodesInfo">Information about fault codes in the vehicle.</string>

    <!--    DRIVE_SETTINGS-->
    <string name="settings_dialog">Settings</string>

    <!--    DRIVE-->
    <string name="rpmText">Engine RPM</string>
    <string name="coolantText">Coolant (C)</string>
    <string name="maxSpeedText">Max speed (km/h)</string>
    <string name="oilTempText">Oil temperature (C)</string>
    <string name="engineLoadText">Engine load</string>
    <string name="speedometerText">Speedometer (km/h)</string>
    <string name="waiting_for_obd">Waiting for paired OBD adapter</string>
    <string name="connecting_to_ecu">Connecting to ECU</string>
    <string name="obd2_adapter_not_responding">The OBD adapter is not responding</string>
    <string name="obd_connected">OBD Connected</string>
    <string name="connect_lost">Connect Lost</string>
    <string name="engineRunningTip">You need running engine if you want to view car info!</string>
    <string name="start_live_data">Start live data!</string>
    <string name="stop_live_data">Stop live data!</string>

    <!--    DTCs-->
    <string name="get_codes">Get DTCs</string>
    <string name="clear_codes">Clear DTCs</string>
    <string name="copy_codes">Copy DTCs</string>
    <string name="save_codes">Save DTCs</string>
    <string name="dtc_copied">DTCs are now copied to clipboard!</string>
    <string name="dtc_cleared">DTCs are cleared now!</string>
    <string name="no_dtc">There is no DTCs stored in your vehicle!</string>


    <!--    PREFERENCES-->
    <string name="title_pref_features">Choose features</string>
    <string name="pref_pedestrian_detection">Pedestrian detection.</string>
    <string name="pref_pedestrian_detection_summary">Turn on/off pedestrian detection.</string>
    <string name="pref_sleep_detection">Sleep detection</string>
    <string name="pref_sleep_detection_summary">Turn on/off sleep detection.</string>
    <string name="pref_black_box">Sleep detection</string>
    <string name="pref_black_box_summary">Turn on/off sleep detection.</string>
    <string name="pref_upload_category_title">Data Upload</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="title_pref_obd">OBD Preferences</string>
    <string name="title_pref_commands">OBD Commands</string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="pref_upload_title">Enable Data Upload</string>
    <string name="pref_upload_summaryOff">Enable http data upload</string>
    <string name="pref_upload_summaryOn">Disable http data upload</string>
    <string name="pref_upload_url_title">Upload URL</string>
    <string name="pref_upload_url_summary">POST URL that will accept real-time data</string>
    <string name="pref_vehicle_id_title">Vehicle ID</string>
    <string name="pref_vehicle_id_summary">Optional unique id of this vehicle, used with uploaded data</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
    <string name="pref_gps_category_title">Enable GPS</string>
    <string name="pref_gps_category_summaryOff">Turn on GPS</string>
    <string name="pref_gps_category_summaryOn">Turn off GPS</string>
    <string name="pref_gps_update_period_title">Update Period in Seconds</string>
    <string name="pref_gps_update_period_summary">The length of time between querying new position in seconds</string>
    <string name="pref_gps_distance_period_title">Update Period in Meters</string>
    <string name="pref_gps_distance_period_summary">Min Distance between location updates, in meters</string>
    <string name="pref_obd_protocols_title">OBD Protocol</string>
    <string name="pref_obd_protocols_summary">Select OBD Protocol to use</string>
    <string name="pref_imperial_units_title">Imperial Units</string>
    <string name="pref_imperial_units_summaryOff">Enable imperial units</string>
    <string name="pref_imperial_units_summaryOn">Go back to metric units</string>
    <string name="pref_obd_update_period_title">Update Period in Seconds</string>
    <string name="pref_obd_update_period_summary">The length of time between querying vehicle data in seconds</string>
    <string name="pref_max_fuel_econ_title">Maximum Fuel Economy Value</string>
    <string name="pref_max_fuel_econ_summary">Any fuel economy values larger than this will be thrown out</string>
    <string name="pref_volumetric_efficiency_dialog_title">Volumetric Efficiency (eg 0.85)</string>
    <string name="pref_volumetric_efficiency_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_volumetric_efficiency_title">Volumetric Efficiency</string>
    <string name="pref_engine_displacement_title">Engine Displacement (liters)</string>
    <string name="pref_engine_displacement_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_reader_config_title">Reader Config Commands</string>
    <string name="pref_reader_config_summary">Commands to configure bluetooth reader, separate with new line</string>
    <string name="title_pref_commands_summary">Select the commands you would like to see in real-time.</string>
    <string name="title_pref_commands_title">OBD Commands</string>
    <string name="title_pref_full_logging"> Full logging configuration </string>
    <string name="pref_enable_full_logging_summary"> Enables full offline logging with upload</string>
    <string name="pref_enable_full_logging_title"> Enable full logging </string>
    <string name="default_dirname_full_logging">OBDReaderLogs</string>
    <string name="pref_dirname_dialogTitle">Choose the name of the directory to save the logs</string>
    <string name="pref_dirname_title">Directory name</string>
    <string name="pref_dirname_summary">Name of the directory where to save the files</string>
    <string name="pref_dev_email_title">Developer Email</string>
    <string name="pref_dev_email_summary">Logs will be emailed to this address</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="exit">Exit</string>
    <string name="title_activity_data_view">DataView</string>
    <string name="tab_text_1">Map graphing</string>
    <string name="tab_text_2">Charts</string>
</resources>
