<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_dialog"
        app:showAsAction="ifRoom">
        <menu android:icon="@drawable/ic_settings">
            <item
                android:id="@+id/getCodes"
                android:title="@string/get_codes"
                app:showAsAction="never" />
            <item
                android:id="@+id/clearCodes"
                android:title="@string/clear_codes"
                app:showAsAction="never" />
            <item
                android:id="@+id/copyCodes"
                android:title="@string/copy_codes"
                app:showAsAction="never" />
            <item
                android:id="@+id/saveCodes"
                android:title="@string/save_codes"
                app:showAsAction="never" />
            <item
                android:id="@+id/settings"
                android:title="Settings"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>