<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bluetoothSearch"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_dialog"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/start_live_data"
                android:title="@string/start_live_data"
                app:showAsAction="never"/>
            <item android:id="@+id/stop_live_data"
                android:title="@string/stop_live_data"
                app:showAsAction="never"/>
            <item android:id="@+id/driveSettings"
                android:title="@string/settings_dialog"
                app:showAsAction="never"/>

        </menu>
    </item>
</menu>